# Haskel_Getting-Started

./: CHANGELOG.md  Getting-Started.cabal  LICENSE  README.md  Tutorial.ipynb
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan
